--- a/IRKit/IRKitResources/IRPeripheralCell.xib
+++ b/IRKit/IRKitResources/IRPeripheralCell.xib
@@ -1,87 +1,55 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="IRPeripheralCell"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="IRPeripheralCell" rowHeight="119" id="322" customClass="IRPeripheralCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="IRPeripheralCell" rowHeight="119" id="322" customClass="IRPeripheralCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="322" id="9SA-eN-Zg9">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
+                <rect key="frame" x="0.0" y="0.0" width="287" height="57"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="323">
-                        <rect key="frame" x="12" y="0.0" width="296" height="58"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="icn_device.png" translatesAutoresizingMaskIntoConstraints="NO" id="339">
-                                <rect key="frame" x="12" y="11" width="36" height="36"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="36" id="518"/>
-                                    <constraint firstAttribute="height" constant="36" id="519"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="351">
-                                <rect key="frame" x="61" y="11" width="39" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="355"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="16"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="477">
-                                <rect key="frame" x="61" y="35" width="223" height="17"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="12"/>
-                                <color key="textColor" red="0.47450980390000003" green="0.47843137250000001" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="icn_arrow.png" translatesAutoresizingMaskIntoConstraints="NO" id="393">
-                                <rect key="frame" x="261" y="21" width="15" height="15"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="494">
-                                <rect key="frame" x="0.0" y="58" width="296" height="1"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.12941176469999999" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <rect key="contentStretch" x="0.0" y="0.0" width="1" height="0.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="508"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" red="0.16862745100000001" green="0.1764705882" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="icn_device.png" translatesAutoresizingMaskIntoConstraints="NO" id="339">
+                        <rect key="frame" x="12" y="11" width="36" height="36"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="393" secondAttribute="trailing" constant="20" id="450"/>
-                            <constraint firstItem="339" firstAttribute="centerY" secondItem="323" secondAttribute="centerY" id="460"/>
-                            <constraint firstItem="339" firstAttribute="leading" secondItem="323" secondAttribute="leading" constant="12" id="461"/>
-                            <constraint firstItem="393" firstAttribute="top" secondItem="323" secondAttribute="top" constant="21" id="473"/>
-                            <constraint firstItem="351" firstAttribute="leading" secondItem="477" secondAttribute="leading" id="486"/>
-                            <constraint firstItem="351" firstAttribute="top" secondItem="339" secondAttribute="top" id="491"/>
-                            <constraint firstItem="494" firstAttribute="leading" secondItem="323" secondAttribute="leading" id="500"/>
-                            <constraint firstAttribute="trailing" secondItem="494" secondAttribute="trailing" id="504"/>
-                            <constraint firstItem="494" firstAttribute="top" secondItem="323" secondAttribute="top" constant="58" id="507"/>
-                            <constraint firstAttribute="bottom" secondItem="477" secondAttribute="bottom" constant="6" id="517"/>
-                            <constraint firstAttribute="trailing" secondItem="477" secondAttribute="trailing" constant="12" id="4dH-s5-VEu"/>
-                            <constraint firstAttribute="centerY" secondItem="393" secondAttribute="centerY" id="5yC-pw-NHs"/>
-                            <constraint firstItem="351" firstAttribute="leading" secondItem="339" secondAttribute="trailing" constant="13" id="dUi-oB-ZH6"/>
+                            <constraint firstAttribute="width" constant="36" id="518"/>
+                            <constraint firstAttribute="height" constant="36" id="519"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="Zlz-jm-Ry7"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="36" id="ofU-w9-288"/>
                         </constraints>
-                    </view>
+                    </imageView>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="351">
+                        <rect key="frame" x="56" y="7" width="201" height="26"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="26" id="355"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="477">
+                        <rect key="frame" x="57" y="30" width="223" height="17"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="12"/>
+                        <color key="textColor" red="0.47450980390000003" green="0.47843137250000001" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="351" firstAttribute="top" secondItem="9SA-eN-Zg9" secondAttribute="top" constant="7" id="57x-Pa-k0u"/>
+                    <constraint firstItem="339" firstAttribute="leading" secondItem="9SA-eN-Zg9" secondAttribute="leading" constant="12" id="KqT-ER-BMX"/>
+                    <constraint firstAttribute="trailing" secondItem="351" secondAttribute="trailing" constant="30" id="kBj-VA-NFn"/>
+                    <constraint firstItem="351" firstAttribute="leading" secondItem="339" secondAttribute="trailing" constant="8" id="mRm-4q-dNn"/>
+                    <constraint firstAttribute="centerY" secondItem="339" secondAttribute="centerY" id="zL4-J9-IuR"/>
+                </constraints>
             </tableViewCellContentView>
-            <constraints>
-                <constraint firstItem="323" firstAttribute="bottom" secondItem="322" secondAttribute="bottom" id="0hU-oe-e92"/>
-                <constraint firstItem="323" firstAttribute="leading" secondItem="322" secondAttribute="leading" constant="12" id="LIy-jH-xrg"/>
-                <constraint firstItem="323" firstAttribute="centerX" secondItem="322" secondAttribute="centerX" id="eP7-Kj-SON"/>
-                <constraint firstItem="323" firstAttribute="top" secondItem="322" secondAttribute="top" id="fmX-SS-em7"/>
-            </constraints>
             <connections>
                 <outlet property="detailLabel" destination="477" id="487"/>
                 <outlet property="iconView" destination="339" id="493"/>
@@ -90,7 +58,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="icn_arrow.png" width="15" height="15"/>
         <image name="icn_device.png" width="36" height="36"/>
     </resources>
 </document>
