--- a/IRKit/IRKitResources/IRPeripheralNameEditViewController.xib
+++ b/IRKit/IRKitResources/IRPeripheralNameEditViewController.xib
@@ -48,7 +48,7 @@
                                 <constraint firstAttribute="height" constant="48" id="427"/>
                             </constraints>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="20"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                             <textInputTraits key="textInputTraits" returnKeyType="done"/>
                             <connections>
                                 <action selector="editingChanged:" destination="-1" eventType="editingChanged" id="480"/>
